fix jump link bug

--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,7 +1,7 @@
 .nav {
     position: fixed;
     padding: 0 6px;
-    z-index: 1;
+    z-index: 2;
     top: 3%;
     left: 5%;
 }
@@ -29,6 +29,7 @@
     animation: slidein .5s;
     background-color: black;
     padding-top: 15%;
+    z-index: 1;
 }
 
 .jumpLink, .resumeLink {
